kafka/base/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-console
  namespace: guardian
  labels:
    k8s-app: kafka-console
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kafka-console
  template:
    metadata:
      name: kafka-console
      labels:
        k8s-app: kafka-console
    spec:
      containers:
        - name: kafka-console
          image: docker.redpanda.com/redpandadata/console:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /admin/health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /admin/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
