kafka/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-console
  namespace: guardian
  labels:
    k8s-app: kafka-console
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    k8s-app: kafka-console
  type: ClusterIP
